Fixed autoaway plugin installation.

--- a/trunk/plugins/autoaway/CMakeLists.txt
+++ b/trunk/plugins/autoaway/CMakeLists.txt
@@ -54,7 +54,7 @@ IF(COMPILE_PLUGIN)
     SET_TARGET_PROPERTIES(autoaway PROPERTIES PREFIX "")
 
     # install target
-    INSTALL(TARGETS autoaway LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
+    INSTALL(TARGETS autoaway LIBRARY DESTINATION ${SIM_PLUGIN_DIR} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
 ELSE(COMPILE_PLUGIN)
     MESSAGE(STATUS "XScreenSaver library not found, autoaway plugin disabled")
 ENDIF(COMPILE_PLUGIN)
