don't create an own target for every small crap but add them as a source to their parents. This greatly reduces the target count and improves the clarity in VisualStudio. fix mo-file generation for win32 (msgfmt don't need '-o')
Please make sure to *not* use tabs in the cmake files because they're unreadable for tab width != 8 then.

--- a/trunk/plugins/weather/CMakeLists.txt
+++ b/trunk/plugins/weather/CMakeLists.txt
@@ -20,6 +20,9 @@ KDE3_AUTOMOC(${weather_LIB_SRCS})
 # don't forget our ui's
 QT3_ADD_UI_FILES(weather_LIB_SRCS ${weather_UI_FILES})
 
+# so we don't need an extra CMakeLists.txt in every subdirectory
+ADD_JISP_ARCHIVE(jisp weather.jisp weather_LIB_SRCS)
+
 ADD_LIBRARY(weather SHARED ${weather_LIB_SRCS})
 
 # some needed include dirs
@@ -28,9 +31,6 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
 TARGET_LINK_LIBRARIES(weather simlib)
 
 SET_TARGET_PROPERTIES(weather PROPERTIES PREFIX "")
-
-# so we don't need an extra CMakeLists.txt in every subdirectory
-ADD_JISP_ARCHIVE(jisp weather.jisp)
 
 # install target
 INSTALL(TARGETS weather LIBRARY DESTINATION ${SIM_PLUGIN_DIR} RUNTIME  DESTINATION ${SIM_PLUGIN_DIR})
