add headers so they show up in visual studio/xcode/kdevelop

--- a/trunk/plugins/__homedir/CMakeLists.txt
+++ b/trunk/plugins/__homedir/CMakeLists.txt
@@ -6,11 +6,17 @@ PROJECT(__homedir)
 #conditional sources
 IF(WIN32)
 	SET (homedircfg_SRC homedircfg.cpp)
+	SET (homedircfg_HDR homedircfg.h)
 ENDIF(WIN32)
 
 SET(__homedir_LIB_SRCS
         homedir.cpp
 	${homedircfg_SRC}
+)
+
+SET(__homedir_LIB_HDR
+        homedir.h
+	${homedircfg_HDR}
 )
 
 IF (WIN32)
@@ -23,7 +29,7 @@ KDE3_AUTOMOC(${__homedir_LIB_SRCS})
 # don't forget our ui's
 QT3_ADD_UI_FILES(__homedir_LIB_SRCS ${__homedir_UI_FILES})
 
-ADD_LIBRARY(__homedir SHARED ${__homedir_LIB_SRCS})
+ADD_LIBRARY(__homedir SHARED ${__homedir_LIB_SRCS} ${__homedir_LIB_HDR})
 
 # some needed include dirs
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
