--- a/trunk/plugins/about/CMakeLists.txt
+++ b/trunk/plugins/about/CMakeLists.txt
@@ -8,6 +8,11 @@ SET(about_LIB_SRCS
         aboutdlg.cpp
 )
 
+SET(about_LIB_HDRS
+        about.h
+        aboutdlg.h
+)
+
 SET(about_UI_FILES
         aboutdlgbase.ui
 )
@@ -18,7 +23,7 @@ KDE3_AUTOMOC(${about_LIB_SRCS})
 # don't forget our ui's
 QT3_ADD_UI_FILES(about_LIB_SRCS ${about_UI_FILES})
 
-ADD_LIBRARY(about SHARED ${about_LIB_SRCS})
+ADD_LIBRARY(about SHARED ${about_LIB_SRCS} ${about_LIB_HDRS})
 
 # some needed include dirs
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
