--- a/trunk/plugins/background/CMakeLists.txt
+++ b/trunk/plugins/background/CMakeLists.txt
@@ -8,6 +8,11 @@ SET(background_LIB_SRCS
         bkgndcfg.cpp
 )
 
+SET(background_LIB_HDRS
+        background.h
+        bkgndcfg.h
+)
+
 SET(background_UI_FILES
         bkgndcfgbase.ui
 )
@@ -18,7 +23,7 @@ KDE3_AUTOMOC(${background_LIB_SRCS})
 # don't forget our ui's
 QT3_ADD_UI_FILES(background_LIB_SRCS ${background_UI_FILES})
 
-ADD_LIBRARY(background SHARED ${background_LIB_SRCS})
+ADD_LIBRARY(background SHARED ${background_LIB_SRCS} ${background_LIB_HDRS})
 
 # some needed include dirs
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
