--- a/trunk/plugins/logger/CMakeLists.txt
+++ b/trunk/plugins/logger/CMakeLists.txt
@@ -8,6 +8,11 @@ SET(logger_LIB_SRCS
         logger.cpp
 )
 
+SET(logger_LIB_HDRS
+        logconfig.h
+        logger.h
+)
+
 SET(logger_UI_FILES
         logconfigbase.ui
 )
@@ -18,7 +23,7 @@ KDE3_AUTOMOC(${logger_LIB_SRCS})
 # don't forget our ui's
 QT3_ADD_UI_FILES(logger_LIB_SRCS ${logger_UI_FILES})
 
-ADD_LIBRARY(logger SHARED ${logger_LIB_SRCS})
+ADD_LIBRARY(logger SHARED ${logger_LIB_SRCS} ${logger_LIB_HDRS})
 
 # some needed include dirs
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
