--- a/trunk/plugins/msn/CMakeLists.txt
+++ b/trunk/plugins/msn/CMakeLists.txt
@@ -4,13 +4,23 @@
 PROJECT(msn)
 
 SET(msn_LIB_SRCS
-msn.cpp
+        msn.cpp
         msnclient.cpp
         msnconfig.cpp
         msnhttp.cpp
         msninfo.cpp
         msnpacket.cpp
         msnsearch.cpp
+)
+
+SET(msn_LIB_HDRS
+        msn.h
+        msnclient.h
+        msnconfig.h
+        msnhttp.h
+        msninfo.h
+        msnpacket.h
+        msnsearch.h
 )
 
 SET(msn_UI_FILES
@@ -25,7 +35,7 @@ KDE3_AUTOMOC(${msn_LIB_SRCS})
 # don't forget our ui's
 QT3_ADD_UI_FILES(msn_LIB_SRCS ${msn_UI_FILES})
 
-ADD_LIBRARY(msn SHARED ${msn_LIB_SRCS})
+ADD_LIBRARY(msn SHARED ${msn_LIB_SRCS} ${msn_LIB_HDRS})
 
 # some needed include dirs
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
