--- a/trunk/plugins/replace/CMakeLists.txt
+++ b/trunk/plugins/replace/CMakeLists.txt
@@ -8,6 +8,11 @@ SET(replace_LIB_SRCS
         replacecfg.cpp
 )
 
+SET(replace_LIB_HDRS
+        replace.h
+        replacecfg.h
+)
+
 SET(replace_UI_FILES
         replacecfgbase.ui
 )
@@ -18,7 +23,7 @@ KDE3_AUTOMOC(${replace_LIB_SRCS})
 # don't forget our ui's
 QT3_ADD_UI_FILES(replace_LIB_SRCS ${replace_UI_FILES})
 
-ADD_LIBRARY(replace SHARED ${replace_LIB_SRCS})
+ADD_LIBRARY(replace SHARED ${replace_LIB_SRCS} ${replace_LIB_HDRS})
 
 # some needed include dirs
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
