--- a/trunk/plugins/spell/CMakeLists.txt
+++ b/trunk/plugins/spell/CMakeLists.txt
@@ -11,11 +11,22 @@ IF(ASPELL_FOUND AND NOT USE_KDE3)
             speller.cpp
             spellhighlight.cpp
     )
-    
+
+    SET(spell_LIB_HDRS
+            spell.h
+            spellcfg.h
+            speller.h
+            spellhighlight.h
+    )
+
     IF(WIN32)
       SET(spell_LIB_SRCS
               ${spell_LIB_SRCS}
               spellfind.cpp
+      )
+      SET(spell_LIB_HDRS
+              ${spell_LIB_HDRS}
+              spellfind.h
       )
     ENDIF(WIN32)
 
@@ -30,7 +41,7 @@ IF(ASPELL_FOUND AND NOT USE_KDE3)
     # don't forget our ui's
     QT3_ADD_UI_FILES(spell_LIB_SRCS ${spell_UI_FILES})
 
-    ADD_LIBRARY(spell SHARED ${spell_LIB_SRCS})
+    ADD_LIBRARY(spell SHARED ${spell_LIB_SRCS} ${spell_LIB_HDRS})
 
     # some needed include dirs
     INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR} ${ASPELL_INCLUDE_DIR})
