--- a/trunk/plugins/splash/CMakeLists.txt
+++ b/trunk/plugins/splash/CMakeLists.txt
@@ -7,10 +7,14 @@ SET(splash_LIB_SRCS
         splash.cpp
 )
 
+SET(splash_LIB_HDR
+        splash.h
+)
+
 # moc, if needed
 KDE3_AUTOMOC(${splash_LIB_SRCS})
 
-ADD_LIBRARY(splash SHARED ${splash_LIB_SRCS})
+ADD_LIBRARY(splash SHARED ${splash_LIB_SRCS} ${splash_LIB_HDR})
 
 # some needed include dirs
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
