--- a/trunk/plugins/styles/wood/CMakeLists.txt
+++ b/trunk/plugins/styles/wood/CMakeLists.txt
@@ -7,10 +7,14 @@ SET(wood_LIB_SRCS
         wood.cpp
 )
 
+SET(wood_LIB_HDRS
+        wood.h
+)
+
 # moc, if needed
 KDE3_AUTOMOC(${wood_LIB_SRCS})
 
-ADD_LIBRARY(wood SHARED ${wood_LIB_SRCS})
+ADD_LIBRARY(wood SHARED ${wood_LIB_SRCS} ${wood_LIB_HDRS})
 
 # some needed include dirs
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
