--- a/trunk/plugins/transparent/CMakeLists.txt
+++ b/trunk/plugins/transparent/CMakeLists.txt
@@ -9,6 +9,11 @@ IF(WIN32 OR USE_KDE3)
 	        transparentcfg.cpp
 	)
 
+	SET(transparent_LIB_HDRS
+        	transparent.cpp
+	        transparentcfg.cpp
+	)
+
 	SET(transparent_UI_FILES
         	transparentcfgbase.ui
 	)
@@ -24,7 +29,7 @@ IF(WIN32 OR USE_KDE3)
 	# don't forget our ui's
 	QT3_ADD_UI_FILES(transparent_LIB_SRCS ${transparent_UI_FILES})
 
-	ADD_LIBRARY(transparent SHARED ${transparent_LIB_SRCS})
+	ADD_LIBRARY(transparent SHARED ${transparent_LIB_SRCS} ${transparent_LIB_HDRS})
 
 	# some needed include dirs
 	INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
