--- a/trunk/plugins/update/CMakeLists.txt
+++ b/trunk/plugins/update/CMakeLists.txt
@@ -9,10 +9,14 @@ SET(update_LIB_SRCS
         update.cpp
 )
 
+SET(update_LIB_HDRS
+        update.h
+)
+
 # moc, if needed
 KDE3_AUTOMOC(${update_LIB_SRCS})
 
-ADD_LIBRARY(update SHARED ${update_LIB_SRCS})
+ADD_LIBRARY(update SHARED ${update_LIB_SRCS} ${update_LIB_HDRS})
 
 # some needed include dirs
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
