--- a/trunk/plugins/yahoo/CMakeLists.txt
+++ b/trunk/plugins/yahoo/CMakeLists.txt
@@ -17,6 +17,16 @@ SET(yahoo_LIB_SRCS
         yahootransformtables.c
 )
 
+SET(yahoo_LIB_HDRS
+        md5.h
+        sha.h
+        yahoo.h
+        yahoocfg.h
+        yahooclient.h
+        yahooinfo.h
+        yahoosearch.h
+)
+
 SET(yahoo_UI_FILES
         yahoocfgbase.ui
         yahooinfobase.ui
@@ -29,7 +39,7 @@ KDE3_AUTOMOC(${yahoo_LIB_SRCS})
 # don't forget our ui's
 QT3_ADD_UI_FILES(yahoo_LIB_SRCS ${yahoo_UI_FILES})
 
-ADD_LIBRARY(yahoo SHARED ${yahoo_LIB_SRCS})
+ADD_LIBRARY(yahoo SHARED ${yahoo_LIB_SRCS} ${yahoo_LIB_HDRS})
 
 # some needed include dirs
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
