--- a/trunk/plugins/ontop/CMakeLists.txt
+++ b/trunk/plugins/ontop/CMakeLists.txt
@@ -8,6 +8,11 @@ SET(ontop_LIB_SRCS
         ontopcfg.cpp
 )
 
+SET(ontop_LIB_HDRS
+        ontop.cpp
+        ontopcfg.cpp
+)
+
 SET(ontop_UI_FILES
         ontopcfgbase.ui
 )
@@ -18,7 +23,7 @@ KDE3_AUTOMOC(${ontop_LIB_SRCS})
 # don't forget our ui's
 QT3_ADD_UI_FILES(ontop_LIB_SRCS ${ontop_UI_FILES})
 
-ADD_LIBRARY(ontop SHARED ${ontop_LIB_SRCS})
+ADD_LIBRARY(ontop SHARED ${ontop_LIB_SRCS} ${ontop_LIB_HDRS})
 
 # some needed include dirs
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
