--- a/trunk/plugins/autoaway/CMakeLists.txt
+++ b/trunk/plugins/autoaway/CMakeLists.txt
@@ -47,9 +47,9 @@ IF(COMPILE_PLUGIN)
     KDE3_AUTOMOC(${autoaway_LIB_SRCS})
 
     # don't forget our ui's
-    QT3_ADD_UI_FILES(autoaway_LIB_SRCS ${autoaway_UI_FILES} ${autoaway_LIB_HDRS})
+    QT3_ADD_UI_FILES(autoaway_LIB_SRCS ${autoaway_UI_FILES})
 
-    ADD_LIBRARY(autoaway SHARED ${autoaway_LIB_SRCS})
+    ADD_LIBRARY(autoaway SHARED ${autoaway_LIB_SRCS} ${autoaway_LIB_HDRS})
 
     # some needed include dirs
     INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
