add uninstall target (from cmake wiki)

--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -104,3 +104,12 @@ IF(NOT HAVE_UNISTD_H)
     WRITE_FILE( ${CMAKE_CURRENT_BINARY_DIR}/sim/unistd.h
                 "/* dummy unistd.h file for flex generated parsers */" )
 ENDIF(NOT HAVE_UNISTD_H)
+
+# for uninstall target
+CONFIGURE_FILE(
+  "${CMAKE_CURRENT_SOURCE_DIR}/cmake/cmake_uninstall.cmake.in"
+  "${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake"
+  IMMEDIATE @ONLY)
+
+ADD_CUSTOM_TARGET(uninstall
+  "${CMAKE_COMMAND}" -P "${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake")
